# qrcode-rust2

./: .bumpversion.toml  .gitignore  AUTHORS.adoc  CHANGELOG.adoc  CONTRIBUTING.adoc  Cargo.toml  LICENSE-MIT  README.md  justfile  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: CI.yaml  REUSE.yaml  rust.yml
benches/: eps.rs  image.rs  pic.rs  qr_code.rs  string.rs  svg.rs  unicode.rs
examples/: encode_eps.rs  encode_image.rs  encode_pic.rs  encode_string.rs  encode_svg.rs  encode_unicode.rs
src/: bits.rs  canvas.rs  cast.rs  ec.rs  lib.rs  optimize.rs  render.rs  test_annex_i_micro_qr_as_image.png.license  types.rs
src/render/: eps.rs  image.rs  mod.rs  pic.rs  string.rs  svg.rs  unicode.rs
tests/: eps.rs  image.rs  pic.rs  svg.rs
tests/data/: test_annex_i_micro_qr_as_eps.eps  test_annex_i_micro_qr_as_image.png.license  test_annex_i_micro_qr_as_pic.pic  test_annex_i_micro_qr_as_pic.pic.license  test_annex_i_micro_qr_as_svg.svg.license  test_annex_i_qr_as_pic.pic  test_annex_i_rmqr_as_eps.eps  test_annex_i_rmqr_as_pic.pic  test_micro_qr_v4_ec_q_as_eps.eps  test_micro_qr_v4_ec_q_as_pic.pic  test_qr_v40_ec_h_as_eps.eps  test_qr_v40_ec_h_as_pic.pic  test_rmqr_vr17x139_ec_h_as_eps.eps  test_rmqr_vr17x139_ec_h_as_pic.pic
