# SPDX-FileCopyrightText: 2014 kennytm
# SPDX-FileCopyrightText: 2018 Ignas Anikevicius
# SPDX-FileCopyrightText: 2018 Kyle Clemens
# SPDX-FileCopyrightText: 2019 Igor Gnatenko
# SPDX-FileCopyrightText: 2019 Jasper Bryant-Greene
# SPDX-FileCopyrightText: 2024 Alexis Hildebrandt
# SPDX-FileCopyrightText: 2024 Michael Spiegel
# SPDX-FileCopyrightText: 2024 Shun Sakai
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "qrcode2"
version = "0.14.1"
edition = "2024"
rust-version = "1.85.0"
description = "QR code encoder in Rust"
documentation = "https://docs.rs/qrcode2"
repository = "https://github.com/sorairolake/qrcode-rust2"
license = "Apache-2.0 OR MIT"
keywords = ["qrcode", "rmqr"]
categories = ["encoding", "multimedia::images", "no-std"]
include = ["/LICENSES", "/README.md", "/src"]

[[example]]
name = "encode_eps"
required-features = ["eps"]

[[example]]
name = "encode_image"
required-features = ["image"]

[[example]]
name = "encode_pic"
required-features = ["pic"]

[[example]]
name = "encode_string"

[[example]]
name = "encode_svg"
required-features = ["svg"]

[[example]]
name = "encode_unicode"

[dependencies]
image = { version = "0.25.8", default-features = false, optional = true }

[dev-dependencies]
image = "0.25.8"
tempfile = "3.23.0"

[features]
default = ["eps", "image", "pic", "std", "svg"]
eps = []
image = ["dep:image", "std"]
pic = []
std = []
svg = []

[lints.clippy]
cargo = "warn"
nursery = "warn"
pedantic = "warn"

[lints.rust]
missing_debug_implementations = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"
